syntax = "proto3";
option go_package = ".;grpc";

import "google/api/annotations.proto";

package grpc;

service TestService {
  rpc Test(TestRequest) returns (TestResponse) {
    option (google.api.http) = {
      get: "/v1/test",
    };
  }

  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/v1/hello",
    };
  }
}

message TestRequest {}

message TestResponse {
  string message = 1;
}

message HelloRequest {}

message HelloResponse {
  string message = 1;
}
